@@ -79,37 +79,37 @@ GCJFLAGS = @GCJFLAGS@
 GENCAT = gencat
 GETTEXT = 
 GHFW_BINARY_AGE = 0
-GHFW_CFLAGS = -I/usr/include -DNEED_GNOMESUPPORT_H -I/usr/lib/gnome-libs/include -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include 
+GHFW_CFLAGS =  -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include 
 GHFW_INCLUDEDIR = -I/usr/include
 GHFW_INTERFACE_AGE = 0
 GHFW_LIBDIR = -L/usr/lib
-GHFW_LIBS = -lghfax_widgets -lSM -lICE -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm -rdynamic -L/usr/lib -L/usr/X11R6/lib -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl 
+GHFW_LIBS = -lghfax_widgets -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm  
 GHFW_MAJOR_VERSION = 0
 GHFW_MICRO_VERSION = 0
 GHFW_MINOR_VERSION = 0
 GHFW_VERSION = 0.0.0
 GLIBC21 = yes
-GLIB_CFLAGS = 
-GLIB_CONFIG = 
-GLIB_LIBS = 
+GLIB_CFLAGS = -I/usr/include/glib-1.2 -I/usr/lib/glib/include
+GLIB_CONFIG = /usr/bin/glib-config
+GLIB_LIBS = -L/usr/lib -lglib
 GMOFILES =  de.gmo fr.gmo pl.gmo zh_TW.Big5.gmo
 GMSGFMT = /usr/bin/msgfmt
-GNOMEGNORBA_LIBS = -rdynamic -lgnorba -lORBitCosNaming -lORBit -lIIOP -lORBitutil -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl
-GNOMEUI_CFLAGS = -I/usr/include -DNEED_GNOMESUPPORT_H -I/usr/lib/gnome-libs/include -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include
-GNOMEUI_LIBS = -rdynamic -L/usr/lib -L/usr/X11R6/lib -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl
+GNOMEGNORBA_LIBS = 
+GNOMEUI_CFLAGS = 
+GNOMEUI_LIBS = 
 GNOME_APPLETS_LIBS = 
 GNOME_CAPPLET_LIBS = 
-GNOME_CONFIG = /usr/bin/gnome-config
+GNOME_CONFIG = 
 GNOME_DOCKLETS_LIBS = 
-GNOME_INCLUDEDIR = -I/usr/include -DNEED_GNOMESUPPORT_H -I/usr/lib/gnome-libs/include -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/include/gtk-1.2
-GNOME_LIBDIR = -rdynamic -L/usr/lib -L/usr/X11R6/lib
-GNOME_LIBS = -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl
-GNORBA_CFLAGS = -I/usr/include -DNEED_GNOMESUPPORT_H -I/usr/lib/gnome-libs/include -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/include/gtk-1.2
-GNORBA_LIBS = -rdynamic -L/usr/lib -L/usr/X11R6/lib -lgnorba -lORBitCosNaming -lORBit -lIIOP -lORBitutil -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl
-GTKXMHTML_LIBS = -rdynamic -lgtkxmhtml -lXpm -ljpeg -lpng -lz -lSM -lICE -lgtk -lgdk -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm
+GNOME_INCLUDEDIR = 
+GNOME_LIBDIR = 
+GNOME_LIBS = 
+GNORBA_CFLAGS = 
+GNORBA_LIBS = 
+GTKXMHTML_LIBS = 
 GTK_CFLAGS = -I/usr/include/gtk-1.2 -I/usr/include/glib-1.2 -I/usr/lib/glib/include
 GTK_CONFIG = /usr/bin/gtk-config
-GTK_LIBS = -lSM -lICE -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm
+GTK_LIBS = -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm
 INSTOBJEXT = .mo
 INTLBISON = bison
 INTLLIBS = 
@@ -130,10 +130,10 @@ MSGFMT = /usr/bin/msgfmt
 MSGMERGE = 
 OBJDUMP = objdump
 OBJEXT = o
-ORBIT_CFLAGS = -I/usr/include/glib-1.2 -I/usr/lib/glib/include -I/usr/include
-ORBIT_CONFIG = /usr/bin/orbit-config
-ORBIT_IDL = /usr/bin/orbit-idl
-ORBIT_LIBS = -L/usr/lib -lORBitCosNaming -lORBit -lIIOP -lORBitutil -lglib -lm
+ORBIT_CFLAGS = 
+ORBIT_CONFIG = 
+ORBIT_IDL = 
+ORBIT_LIBS = 
 PIXMAPS_DIR = /usr/share/pixmaps/ghfaxwidgets
 POFILES =  de.po fr.po pl.po zh_TW.Big5.po
 POSUB = po
@@ -150,7 +150,7 @@ WINDRES =
 WINDRES_INCLUDE_DIR = 
 XGETTEXT = /usr/bin/xgettext
 XPM_LIBS = -lXpm
-ZVT_LIBS = -rdynamic -lzvt -lutil -lSM -lICE -lgdk_imlib -lgtk -lgdk -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm
+ZVT_LIBS = 
 cflags_set = yes
 cxxflags_set = @cxxflags_set@
 
