@@ -11,6 +11,7 @@ AM_MAINTAINER_MODE
 
 AC_ISC_POSIX
 AC_PROG_CC
+AC_LANG_C
 
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
